[package]
name = "cargo-online-judge-verification-helper-helper"
version = "0.0.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Helper for oj-verify."
repository = "https://github.com/qryxip/cargo-online-judge-verification-helper-helper"
keywords = ["competitive"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

[[bin]]
name = "cargo-online-judge-verification-helper-helper"
path = "src/main.rs"

[[bin]]
name = "cargo-oj-verify-helper"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.36"
cargo_metadata = "0.12.1"
duct = "0.13.4"
dunce = "1.0.1"
glob = "0.3.0"
indoc = "1.0.3"
itertools = "0.10.0"
pulldown-cmark = "0.8.0"
quote = "1.0.8"
structopt = "0.3.21"
syn = { version = "1.0.56", features = ["full", "parsing"] }
tempfile = "3.1.0"
